# dev-sandbox

./: .gitignore  README.md  pom.xml
.github/workflows/: cpp-opengl-build-from-docker.yaml  cpp-opengl-build.yaml  github-002-filter-workflow.yml  github-003-debug-workflow.yaml  github-004-output-variables.yml  github-005-cache-dependency.yml  github-debug-workflow.yaml  hello-world.yml
aws-ec2/: pom.xml
aws-lambda/: pom.xml
azure-function/: README.md  pom.xml  sample.env
azure-function/devops/: azure-pipelines.yml
azure-function/tutorial/: devops-setup.md
coding/cpp/: .gitignore
coding/cpp/opengl/: README.md
coding/html/w3-css/: tictactoe-board.html
coding/java/: README.md  parentPom.xml  pom.xml
coding/java/azure-webapp/: README.md
coding/java/crypto-keystore/: dependency-reduced-pom.xml
coding/java/google-drive-api/: .gitignore  README.md  pom.xml
coding/java/selenium-webscrapper/: .gitignore  README.md
coding/java/spring-webapp/: pom.xml
coding/javascript/express-static-server/: package-lock.json
coding/javascript/html/: multi-layer-canvas.html
coding/javascript/ip-camera/: README.md  package-lock.json  package.json
coding/javascript/webpack/: README.md  package-lock.json  package.json  webpack.config.js
coding/lua/: Dockerfile  commands.txt
coding/lua/scripts/: helloworld.lua
coding/python/: README.md
coding/python/convolutional-network/: .gitignore  cnn-basics.py  cnn-mnist-test.py  cnn-mnist-train.py  requirements.txt
cpp/: .gitignore  build.bat
cpp/opengl/: README.md  build.bat
cpp/opengl/src/: CMakeLists.txt  CMakePresets.json  app.cpp  app1-hello-triangles.cpp
cpp/opengl/src/shared/: winutil.h
cpp/src/: CMakeLists.txt  vcpkg.json
cpp/src/datastructures/: Vectors.cpp
cpp/src/oop/: Classes.cpp
cpp/src/opengl/: 001-HelloTri.cpp  002-Texture.cpp  003-Camera.cpp  004-FreeCamera.cpp  005-BasicLighting.cpp  A01-Matrix.cpp  Camera.cpp  Camera.h  Cube.cpp  FileUtility.cpp  FileUtility.h  Mesh.h  ProcessKey.cpp  ProcessKey.h  Shader.cpp  Shader.h  Square.cpp  Texture.cpp  Texture.h  Triangle.cpp  VertexBufferObject.cpp  VertexBufferObject.h
cpp/src/raii/: Pointers.cpp
crypto-keystore/: .gitignore  pom.xml
google-drive-api/: README.md
google-drive-api/doc/: setup-gcp.md
html/w3-css/: page1.html  page2.html  tictactoe-board.html
java/: README.md
java/aws-api/: pom.xml
java/azure-function/: .env  README.md  pom.xml
java/azure-webapp/: pom.xml
java/crypto-keystore/: .gitignore  pom.xml
java/selenium-webscrapper/: pom.xml
java/spring-webapp/: README.MD
javascript/html/: bitshift.html  canvas-image-data.html  css-circle.html  mixed-typed-array.html
lua/scripts/: socket-client.lua
python/convolutional-network/: cnn-mnist-model.py  cnn-mnist-plot.py  cnn-mnist-train.py
python/socket/: client1.py  server2.py
spring-webapp/: README.MD  pom.xml
(+253 files in other folders)
